@@ -225,7 +225,7 @@
 			      <accelerator key="n" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image457">
+				<widget class="GtkImage" id="image473">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-new</property>
 				  <property name="icon_size">1</property>
@@ -301,7 +301,7 @@
 			      <accelerator key="p" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image458">
+				<widget class="GtkImage" id="image474">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-print</property>
 				  <property name="icon_size">1</property>
@@ -352,7 +352,7 @@
 			      <accelerator key="z" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image459">
+				<widget class="GtkImage" id="image475">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-undo</property>
 				  <property name="icon_size">1</property>
@@ -374,7 +374,7 @@
 			      <accelerator key="z" modifiers="GDK_CONTROL_MASK | GDK_SHIFT_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image460">
+				<widget class="GtkImage" id="image476">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-redo</property>
 				  <property name="icon_size">1</property>
@@ -472,11 +472,11 @@
 			      <property name="label" translatable="yes">View Recipe _Card</property>
 			      <property name="use_underline">True</property>
 			      <signal name="activate" handler="rl_viewrec" last_modification_time="Sun, 12 Sep 2004 19:57:17 GMT"/>
-			      <accelerator key="o" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 			      <accelerator key="c" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+			      <accelerator key="o" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image461">
+				<widget class="GtkImage" id="image477">
 				  <property name="visible">True</property>
 				  <property name="pixbuf">recbox.png</property>
 				  <property name="xalign">0.5</property>
@@ -498,7 +498,7 @@
 			      <accelerator key="l" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image462">
+				<widget class="GtkImage" id="image478">
 				  <property name="visible">True</property>
 				  <property name="pixbuf">AddToShoppingList.png</property>
 				  <property name="xalign">0.5</property>
@@ -526,7 +526,7 @@
 			      <accelerator key="E" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image463">
+				<widget class="GtkImage" id="image479">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-edit</property>
 				  <property name="icon_size">1</property>
@@ -549,7 +549,7 @@
 			      <accelerator key="d" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image464">
+				<widget class="GtkImage" id="image480">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-delete</property>
 				  <property name="icon_size">1</property>
@@ -602,8 +602,8 @@
 			  <child>
 			    <widget class="GtkMenuItem" id="ingredient_key_editor1">
 			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">Edit Ingredient Keys</property>
-			      <property name="label" translatable="yes">_Ingredient Key Editor</property>
+			      <property name="tooltip" translatable="yes">Edit ingredient keys and nutritional information</property>
+			      <property name="label" translatable="yes">_Ingredient Editor</property>
 			      <property name="use_underline">True</property>
 			      <signal name="activate" handler="ingKeyEditor" last_modification_time="Tue, 21 Sep 2004 00:20:07 GMT"/>
 			    </widget>
@@ -669,7 +669,7 @@
 			      <signal name="activate" handler="about" last_modification_time="Mon, 26 Apr 2004 01:23:41 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image465">
+				<widget class="GtkImage" id="image481">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-dialog-info</property>
 				  <property name="icon_size">1</property>
